tests/NormalTests/paczka1/small_fuzzy/65357755.err
Error in line 1: thMUQ A74 96,0
Error in line 3: A203 A446 45,3
Error in line 2: t7ugDrfxSk A446 56,2
Error in line 7: t7ugDrfxSk S576 67,8
Error in line 10: t7ugDrfxSk A446 38,8
